--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ remote_theme: pmarsceill/just-the-docs
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
